@@ -1,6 +1,7 @@
 1.3.0 /
 [Alexandr Topilski]
 - Ui bug fixes
+- LPUSH UI handling
 
 1.2.0 / December 3, 2016
 [Alexandr Topilski]
